--- a/chromeextension/chstyle.css
+++ b/chromeextension/chstyle.css
@@ -9,6 +9,7 @@ body{
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 
 input{
@@ -25,4 +26,16 @@ button{
     border: none;
     font-weight: bold;
     margin-bottom: 10px ;
+}
+
+ul{
+    list-style: none;
+    padding-left: 0;
+    margin-top: 20px;
+}
+li{
+    margin-top: 4px;
+}
+a{
+    color: #5f9341
 }
