--- a/chromeextension/chstyle.css
+++ b/chromeextension/chstyle.css
@@ -24,8 +24,15 @@ button{
     background-color: #5f9341;
     color: white;
     border: none;
+    cursor: pointer;
     font-weight: bold;
+    border: 1px solid #5f9341;
     margin-bottom: 10px ;
+}
+
+#delete-btn{
+    background-color: white;
+    color: #5f9341;
 }
 
 ul{
